[package]
name = "rdkit-sys"
authors = ["Xavier Lange (xrlange@gmail.com)", "chrissly31415"]
version = "0.1.12"
edition = "2021"
license = "MIT"
description = "RDKit CFFI library builder and bindings"
repository = "https://github.com/tureus/rdkit-sys"
exclude = ["rdkit-*", "*.tar.gz"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.66"
libc = "0.2"

[build-dependencies]
pkg-config = "0.3.9"
env_logger = "0"
eyre = "0.6"
cxx-build = "1.0.67"