[package]
name = "rdkit-sysm"
authors = ["jiuxie@outlook.com"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "RDKit CFFI library builder and bindings, forked rdkit-sys"
exclude = ["rdkit-*", "*.tar.gz", "examples/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.66"

[build-dependencies]
env_logger = "0.9.0"
cxx-build = "1.0.67"
which = "4.2.5"

[features]
default = []
dynamic-linking-from-conda = []